--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,41 @@
 <!-- <h3>{{test}}</h3> -->
-<div class="d-flex justify-content-center align-items-center" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100vw; height: 100vh;">
-    <div class="card text-center bg-dark text-light" style="width: 40rem; height: 25rem;">
-        <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(8, 50px);">
-            <div class="grid-3">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a><hr>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>            
-            <div class="grid-1 row">
-                <div class="col-4 bg-danger"></div>
-                <div class="col-4 bg-warning"></div>
-                <div class="col-4 bg-info"></div>
+    <div class="d-flex justify-content-center align-items-center" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); /* width: 100vw; height: 100vh; */">
+        <div class="card text-center bg-dark text-light" style="width: 7rem; height: 35rem; margin-right:1%;">
+            <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(8, 50px);">
+                <div class="grid-2"></div>            
+                <div class="grid-2 row">
+                    <div class="col-4 bg-danger"></div>
+                    <div class="col-4 bg-warning"></div>
+                    <div class="col-4 bg-info"></div>
+                </div>
+                <div class="grid-2">2</div>
+                <div class="grid-2">3</div>
+                <div class="grid-2">4</div>
+                <div class="grid-2">5</div>
             </div>
-            <div class="grid-1">2</div>
-            <div class="grid-1">3</div>
-            <div class="grid-1">4</div>
-            <div class="grid-1">5</div>
+        </div>
+
+
+        <div class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem;">
+            <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
+                <div class="grid-1">7</div>
+                <div class="grid-4">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <hr>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+                <div class="grid-1 row">
+                    <div class="col-4 bg-danger"></div>
+                    <div class="col-4 bg-warning"></div>
+                    <div class="col-4 bg-info"></div>
+                </div>
+                <div class="grid-1">2</div>
+                <div class="grid-1">3</div>
+                <div class="grid-1">4</div>
+                <div class="grid-1">5</div>
+                <div class="grid-1">6</div>
+            </div>
         </div>
     </div>
-</div>
