--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,12 @@
 <!-- <h3>{{test}}</h3> -->
-    <div class="d-flex justify-content-center align-items-center" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); /* width: 100vw; height: 100vh; */">
-        <div class="card text-center bg-dark text-light" style="width: 7rem; height: 35rem; margin-right:1%;">
-            <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(8, 50px);">
-                <div class="grid-2"></div>            
-                <div class="grid-2 row">
-                    <div class="col-4 bg-danger"></div>
-                    <div class="col-4 bg-warning"></div>
-                    <div class="col-4 bg-info"></div>
-                </div>
-                <div class="grid-2">2</div>
-                <div class="grid-2">3</div>
-                <div class="grid-2">4</div>
-                <div class="grid-2">5</div>
+    <div class="d-flex justify-content-center align-items-start" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); /* width: 100vw; height: 100vh; */">
+        <div class="card text-center bg-dark text-light text-center" style="width: 9%; height: 15rem; margin-right:1%;">
+            <div class="p-0 card-body" style="display: grid; overflow: hidden; border-radius: 11px;">
+                <div class="sidebarbtn grid-1">about</div>
+                <div class="sidebarbtn grid-1">resume</div>
+                <div class="sidebarbtn grid-1">works</div>
+                <div class="sidebarbtn grid-1">contact</div>
+                <div class="sidebarbtn grid-1">blog</div>
             </div>
         </div>
 
