--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,37 @@
 <!-- <h3>{{test}}</h3> -->
     <div class="d-flex justify-content-center align-items-start" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); /* width: 100vw; height: 100vh; */">
-        <div class="card text-center bg-dark text-light text-center" style="width: 9%; height: 15rem; margin-right:1%;">
-            <div class="p-0 card-body" style="display: grid; overflow: hidden; border-radius: 11px;">
-                <div class="sidebarbtn grid-1">about</div>
-                <div class="sidebarbtn grid-1">resume</div>
-                <div class="sidebarbtn grid-1">works</div>
-                <div class="sidebarbtn grid-1">contact</div>
-                <div class="sidebarbtn grid-1">blog</div>
+        <div class="card text-center bg-dark text-light text-center" style="width: 9%; height: 20rem; margin-right:1%;">
+            <div class="p-0 card-body" style="display: grid; overflow: hidden; border-radius: 11px; cursor:pointer; user-select: none;">
+                <div class="sidebarbtn grid-1" style="border-bottom: #4d4b4b solid 1px; background-color: #5a5a5a7a;">
+                    <div style="display:grid; font-size: smaller; font-family: monospace;">
+                        <i class="grid-1 bi bi-person-fill" style="font-size: larger;"></i>
+                        <i class="grid-1">ABOUT</i>
+                    </div>
+                </div>
+                <div class="sidebarbtn grid-1" style="border-bottom: #4d4b4b solid 1px;">
+                    <div style="display:grid; font-size: smaller;">
+                        <i class="grid-1 bi bi-file-earmark-text" style="font-size: larger;"></i>
+                        <i class="grid-1">RESUME</i>
+                    </div>
+                </div>
+                <div class="sidebarbtn grid-1" style="border-bottom: #4d4b4b solid 1px;">
+                    <div style="display:grid; font-size: smaller;">
+                        <i class="grid-1 bi bi-code-slash" style="font-size: larger;"></i>
+                        <i class="grid-1">WORK</i>
+                    </div>
+                </div>
+                <div class="sidebarbtn grid-1" style="border-bottom: #4d4b4b solid 1px;">
+                    <div style="display:grid; font-size: smaller;">
+                        <i class="grid-1 bi bi-envelope" style="font-size: larger;"></i>
+                        <i class="grid-1">CONTACT</i>
+                    </div>
+                </div>
+                <div class="sidebarbtn grid-1">
+                    <div style="display:grid; font-size: smaller;">
+                        <i class="grid-1 bi bi-substack" style="font-size: larger;"></i>
+                        <i class="grid-1">BLOG</i>
+                    </div>
+                </div>                                
             </div>
         </div>
 
