--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="d-flex justify-content-center align-items-start" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-  <app-sidebar (hideRequested)="hideTarget()"></app-sidebar>  
+  <app-sidebar></app-sidebar>  
   <app-content></app-content>
 </div>
