--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,6 +1,6 @@
-<div class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem;">
-    <div #target class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
-        <div class="grid-1">7</div>
+<div #target class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem;">
+    <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
+        <div class="grid-1">1</div>
         <div class="grid-4">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
@@ -20,3 +20,91 @@
         <div class="grid-1">6</div>
     </div>
 </div>
+<div #target class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem; display:none;">
+    <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
+        <div class="grid-1">2</div>
+        <div class="grid-4">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <hr>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+        <div class="grid-1 row">
+            <div class="col-4 bg-danger"></div>
+            <div class="col-4 bg-warning"></div>
+            <div class="col-4 bg-info"></div>
+        </div>
+        <div class="grid-1">2</div>
+        <div class="grid-1">3</div>
+        <div class="grid-1">4</div>
+        <div class="grid-1">5</div>
+        <div class="grid-1">6</div>
+    </div>    
+</div>    
+<div #target class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem; display:none;">
+    <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
+        <div class="grid-1">3</div>
+        <div class="grid-4">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <hr>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+        <div class="grid-1 row">
+            <div class="col-4 bg-danger"></div>
+            <div class="col-4 bg-warning"></div>
+            <div class="col-4 bg-info"></div>
+        </div>
+        <div class="grid-1">2</div>
+        <div class="grid-1">3</div>
+        <div class="grid-1">4</div>
+        <div class="grid-1">5</div>
+        <div class="grid-1">6</div>
+    </div>    
+</div>  
+<div #target class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem; display:none;">
+    <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
+        <div class="grid-1">4</div>
+        <div class="grid-4">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <hr>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+        <div class="grid-1 row">
+            <div class="col-4 bg-danger"></div>
+            <div class="col-4 bg-warning"></div>
+            <div class="col-4 bg-info"></div>
+        </div>
+        <div class="grid-1">2</div>
+        <div class="grid-1">3</div>
+        <div class="grid-1">4</div>
+        <div class="grid-1">5</div>
+        <div class="grid-1">6</div>
+    </div>    
+</div>  
+<div #target class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem; display:none;">
+    <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
+        <div class="grid-1">5</div>
+        <div class="grid-4">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <hr>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+        <div class="grid-1 row">
+            <div class="col-4 bg-danger"></div>
+            <div class="col-4 bg-warning"></div>
+            <div class="col-4 bg-info"></div>
+        </div>
+        <div class="grid-1">2</div>
+        <div class="grid-1">3</div>
+        <div class="grid-1">4</div>
+        <div class="grid-1">5</div>
+        <div class="grid-1">6</div>
+    </div>    
+</div>  
