--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,4 +1,4 @@
-<div #target class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem;">
+<div #target class="card text-center bg-dark text-light">
     <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
         <div class="grid-1">1</div>
         <div class="grid-4">
@@ -20,7 +20,7 @@
         <div class="grid-1">6</div>
     </div>
 </div>
-<div #target class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem; display:none;">
+<div #target class="card text-center bg-dark text-light" style="display:none;">
     <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
         <div class="grid-1">2</div>
         <div class="grid-4">
@@ -42,7 +42,7 @@
         <div class="grid-1">6</div>
     </div>    
 </div>    
-<div #target class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem; display:none;">
+<div #target class="card text-center bg-dark text-light" style="display:none;">
     <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
         <div class="grid-1">3</div>
         <div class="grid-4">
@@ -64,7 +64,7 @@
         <div class="grid-1">6</div>
     </div>    
 </div>  
-<div #target class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem; display:none;">
+<div #target class="card text-center bg-dark text-light" style="display:none;">
     <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
         <div class="grid-1">4</div>
         <div class="grid-4">
@@ -86,7 +86,7 @@
         <div class="grid-1">6</div>
     </div>    
 </div>  
-<div #target class="card text-center bg-dark text-light" style="width: 60rem; height: 35rem; display:none;">
+<div #target class="card text-center bg-dark text-light" style="display:none;">
     <div class="py-0 card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
         <div class="grid-1">5</div>
         <div class="grid-4">
