--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,15 @@
-<div class="card text-center bg-dark text-light text-center" style="height: 20rem; width:7.5%; position: absolute; left:-8%">
+<div class="card sidebarcardresp bg-dark text-light" style="display: grid;">
+    <div class="row text-center" style="height: 3.5rem;">
+        <div class="col-1 grid"></div>
+        <div *ngFor="let item of sidebaritems" (click)="handleClick(item.val)" (click)="onButtonClick()" id="sidebarbtn" class="col-2">
+            <i class="grid-1 bi bi-{{ item.icon }}" style="font-size: large;"></i>
+            <i class="grid-1" style="font-size: x-small;">{{ item.name }}</i>
+        </div>
+        <div class="col-1"></div>
+    </div>
+</div>
+
+<div class="sidebarcard card bg-dark text-light text-center" style="height: 20rem; width:7.5%; position: absolute; left:-8%">
     <div class="p-0 card-body" style="display: grid; overflow: hidden; border-radius: 11px; cursor:pointer; user-select: none;" *ngFor="let item of sidebaritems"
     [ngStyle]="{'background-color': clickedItem === item.val ? '#5a5a5a7a' : 'transparent'}"
     (click)="handleClick(item.val)" (click)="onButtonClick()" id="sidebarbtn">
