--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -8,6 +8,28 @@
   margin-right: auto;
 }
 
+.mycard
+{
+  width: 90vw; 
+  max-width: 60rem; 
+  height: auto; 
+  padding: 0 15px;
+  border: 1px solid #cdcdcd4d;
+  background-color: rgba(255, 255, 255, 0);
+}
+.mycard::after
+{
+  content: "";
+  background-color: #cdcdcd4d;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 20px;
+  left: 20px;
+  transition: 0.2s;
+}
+
 /* responsive content */
 @media (max-width: 768px) {
   .card {
