--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="d-flex justify-content-center align-items-start responsive-hide-flex" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
   <app-sidebar></app-sidebar>  
+  <app-githubapi></app-githubapi>
   <app-content></app-content>
 </div>
