--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,51 +1,51 @@
-<div #target class="card1 text-center bg-dark text-light">
-    <div class="py-0 mycard card-body" style="height: 33rem;">
+<div #target class="card1 bg-dark text-light">
+    <div class="py-0 mycard card-body" style="height: 33rem; max-height: 600px; overflow-y: auto;">
+        <div class="grid-1 mt-3" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6></div>
         <div class="row">
-            <div class="col-5 bg-info">test</div>
-            <div class="col-7" style="display: grid; grid-template-rows: repeat(10, 50px);">
-                <div class="grid-1">1</div>
-                <div class="grid-4">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                    <hr>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-                <div class="grid-1 row">
-                    <div class="col-4 bg-danger"></div>
-                    <div class="col-4 bg-warning"></div>
-                    <div class="col-4 bg-info"></div>
-                </div>
-                <div class="grid-1">2</div>
-                <div class="grid-1">3</div>
-                <div class="grid-1">4</div>
-                <div class="grid-1">5</div>
-                <div class="grid-1">6</div>
-                
+            <!-- <div class="col-5 bg-info">test</div> -->
+            <div class="col-12" style="display: grid; grid-template-rows: repeat(10, 51px);">
+                <div class="grid-12 mt-2" style="font-family: monospace; ">
+                    <p>
+                        I'm <strong>Fatih Aydın</strong>, a software developer who enjoys turning creative ideas into useful and working applications. I have about two years of experience, and I like solving problems and building software that helps people and businesses.
+                    </p>
+                    <br>
+                    <p>
+                        I started my journey in software development with .NET, and it is still my main focus. I work as a full-stack developer, which means I build both the backend (server side) and the frontend (user side) of applications. I use C#, .NET Core, and Web API for backend development, and JavaScript, jQuery, and HTML for the frontend. I also have experience with desktop apps and RFID solutions.
+                    </p>
+                    <br>
+                    <p>
+                        One of my key strengths is managing a project from the very beginning to the very end. I have successfully taken several projects from the initial idea and coding all the way to setting up the server and deploying the final application.
+                    </p>
+                    <br>
+                    <p>
+                        I am always looking for ways to improve myself. I believe that a good developer never stops learning. That's why I follow the latest trends in technology and enjoy sharing my personal projects on GitHub. This allows me to connect with other developers and contribute to the community. On a personal note, I have completed my mandatory military service, an experience which further strengthened my sense of discipline and responsibility. I am now fully focused on building my career and taking on new, exciting challenges in the world of software development.
+                    </p>
+                </div>                
             </div>
         </div>
     </div>
 </div>
-<div #target class="card1 text-center bg-dark text-light" style="display:none;">
-    <div class="py-0 mycard card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
-        <div class="grid-1">2</div>
-        <div class="grid-4">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-            <hr>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+<div #target class="card1 bg-dark text-light" style="display: none;">
+    <div class="py-0 mycard card-body" style="grid-template-rows: repeat(10, 50px); height: 33rem; max-height: 600px; overflow-y: auto;">
+        <div class="mt-3 mb-3" style="border-bottom: 0.1rem solid #373434;"><h6>Work / Projects</h6></div>
+        <!-- <div class="grid-1 mt-3" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6></div> -->
+
+        <h6 class="m-25 text-center" style="color: lightslategrey;">GitHub Projects</h6>
+        <hr style="width: 25%;margin: auto;color: #565558;">
+        <div class="row mt-3">
+            <div class="col-6" *ngFor="let item of array">
+                <div role="alert" class="alert alert-info text-light" style="background-color: #14171d; display: grid; grid-template-rows: repeat(5, 20px); padding: 5px 10px;"> 
+                    <div class="grid-1" style="font-family: monospace;">
+                         <a href="{{item.clone_url}}" target="_blank" style="text-decoration: none; color: #69d202db;">{{ item.name }}</a>
+                    </div>
+                    <div class="grid-4 text-secondary" style="margin: 3px 0 0 1.5%;">
+                        <span style="font-size: small">
+                            <p>{{ item.description }}</p>
+                        </span>
+                    </div>
+                </div>
+            </div>        
         </div>
-        <div class="grid-1 row">
-            <div class="col-4 bg-danger"></div>
-            <div class="col-4 bg-warning"></div>
-            <div class="col-4 bg-info"></div>
-        </div>
-        <div class="grid-1">2</div>
-        <div class="grid-1">3</div>
-        <div class="grid-1">4</div>
-        <div class="grid-1">5</div>
-        <div class="grid-1">6</div>
     </div>    
 </div>    
 <div #target class="card1 text-center bg-dark text-light" style="display:none;">
