--- a/src/styles.css
+++ b/src/styles.css
@@ -37,3 +37,10 @@ body{
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 768px) {
+  body{
+    background: url('assets/letters.gif') no-repeat center center fixed;
+    background-size: 150% 150%;
+  }
+}
