--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,26 @@
+.cardposition {
+  position: absolute; 
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
+}
+
 @media (max-width: 768px) {
   .responsive-hide-flex {
     display: block !important;
+  }
+
+  .cardposition {
+    width: 92%;
+    top: 1%;
+    left: 50.5%;
+    transform: translateX(-50%);
+  }
+
+    body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow: hidden;
   }
 }
