--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,5 +1,5 @@
 <div #target class="card1 bg-dark text-light" style="display: none;">
-    <div class="py-0 mycard card-body" style="height: 33rem; max-height: 600px; overflow-y: auto;">
+    <div class="py-0 mycard card-body full-height-card">
         <div class="grid-1 mt-3" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6></div>
         <div class="row">
             <!-- <div class="col-5 bg-info">test</div> -->
@@ -26,7 +26,7 @@
     </div>
 </div>
 <div #target class="card1 bg-dark text-light">
-    <div class="py-0 mycard card-body" style="grid-template-rows: repeat(10, 50px); height: 33rem; max-height: 600px; overflow-y: auto;">
+    <div class="py-0 mycard card-body full-height-card">
         <div class="mt-3 mb-3" style="border-bottom: 0.1rem solid #373434;"><h6>Work / Projects</h6></div>
         <!-- <div class="grid-1 mt-3" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6></div> -->
         <h6 class="m-25 text-center" style="color: lightslategrey;">Professional Experiences</h6>
@@ -62,7 +62,7 @@
     </div>    
 </div>    
 <div #target class="card1 text-center bg-dark text-light" style="display:none;">
-    <div class="py-0 mycard card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
+    <div class="py-0 mycard card-body full-height-card">
         <div class="grid-1">3</div>
         <div class="grid-4">
             <h5 class="card-title">Card title</h5>
@@ -84,7 +84,7 @@
     </div>    
 </div>  
 <div #target class="card1 text-center bg-dark text-light" style="display:none;">
-    <div class="py-0 mycard card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
+    <div class="py-0 mycard card-body full-height-card">
         <div class="grid-1">4</div>
         <div class="grid-4">
             <h5 class="card-title">Card title</h5>
@@ -106,7 +106,7 @@
     </div>    
 </div>  
 <div #target class="card1 text-center bg-dark text-light" style="display:none;">
-    <div class="py-0 mycard card-body" style="display: grid; grid-template-rows: repeat(10, 50px);">
+    <div class="py-0 mycard card-body full-height-card">
         <div class="grid-1">5</div>
         <div class="grid-4">
             <h5 class="card-title">Card title</h5>
