Image Lightbox init for certificate page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,13 @@
   <app-githubapi></app-githubapi>
   <app-content></app-content>
 </div>
+
+<div class="modal fade" id="certModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true" style="cursor: auto;">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content" style="border: #ffffff30 12px solid; border-radius: 20px;">
+      <div class="modal-body" id="modalbody" style="padding: 0;">
+
+      </div>
+    </div>
+  </div>
+</div>
