--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 </div>
-<div #target class="card1 bg-dark text-light">
+<div #target class="card1 bg-dark text-light" style="display:none;">
     <div class="py-0 mycard card-body full-height-card">
         <div class="mt-3 mb-3" style="border-bottom: 0.1rem solid #373434;"><h6>Work / Projects</h6></div>
         <!-- <div class="grid-1 mt-3" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6></div> -->
@@ -45,7 +45,7 @@
         <h6 class="m-25 text-center" style="color: lightslategrey;">GitHub Projects</h6>
         <hr style="width: 25%;margin: auto;color: #565558;">
         <div class="row mt-3">
-            <div class="col-6" *ngFor="let item of array; let i = index">
+            <div class="col-12 col-md-6" *ngFor="let item of array; let i = index">
                 <div role="alert" class="alert alert-info text-light" style="cursor: pointer; background-color: #14171d; display: grid; grid-template-rows: repeat(5, 20px); padding: 5px 10px;"> 
                     <div class="grid-1" style="font-family: monospace;">
                          <a href="{{item.clone_url}}" target="_blank" style="text-decoration: none; color: #69d202db;">{{ item.name }}</a>
@@ -63,7 +63,7 @@
 </div>    
 <div #target class="card1 text-center bg-dark text-light" style="display:none;">
     <div class="py-0 mycard card-body full-height-card">
-        <div class="grid-1">3</div>
+        <div class="grid-1">4</div>
         <div class="grid-4">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
@@ -83,26 +83,29 @@
         <div class="grid-1">6</div>
     </div>    
 </div>  
-<div #target class="card1 text-center bg-dark text-light" style="display:none;">
+<div #target class="card1 text-center bg-dark text-light">
     <div class="py-0 mycard card-body full-height-card">
-        <div class="grid-1">4</div>
-        <div class="grid-4">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-            <hr>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="mt-3 mb-3" style="border-bottom: 0.1rem solid #373434;"><h6>Resume / Certificates</h6></div>
+        <h6 class="m-25 text-center" style="color: lightslategrey;">Certificates</h6>
+        <hr style="width: 25%;margin: auto;color: #565558;">
+        <div class="row mt-3">
+            <div class="col-12">
+                <div role="alert" class="alert alert-info text-light" style="background-color: #14171d; display: grid; grid-template-rows: repeat(5, 20px); padding: 5px 10px;"> 
+                    <div class="row">
+                        <div class="col-4">
+                            <img src="https://www.w3schools.com/tags/img_girl.jpg" (click)="certfImg('https://www.w3schools.com/tags/img_girl.jpg')" style="cursor: pointer; border-radius: 10px; border: 2px solid darkgray;" width="275" height="100">
+
+                        </div>
+                        <div class="col-8">
+                            <a href="#" target="_blank" style="text-decoration: none; color: #9ad8dcdb;">Microsoft Learn</a>
+                            <span style="font-size: small">
+                                <p>.Net Core XYZ</p>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>  
         </div>
-        <div class="grid-1 row">
-            <div class="col-4 bg-danger"></div>
-            <div class="col-4 bg-warning"></div>
-            <div class="col-4 bg-info"></div>
-        </div>
-        <div class="grid-1">2</div>
-        <div class="grid-1">3</div>
-        <div class="grid-1">4</div>
-        <div class="grid-1">5</div>
-        <div class="grid-1">6</div>
     </div>    
 </div>  
 <div #target class="card1 text-center bg-dark text-light" style="display:none;">
