--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -93,7 +93,7 @@
                 <div role="alert" class="alert alert-info text-light" style="background-color: #14171d; display: grid; grid-template-rows: repeat(5, 20px); padding: 5px 10px;"> 
                     <div class="row">
                         <div class="col-4">
-                            <img src="https://www.w3schools.com/tags/img_girl.jpg" (click)="certfImg('https://www.w3schools.com/tags/img_girl.jpg')" style="cursor: pointer; border-radius: 10px; border: 2px solid darkgray;" width="275" height="100">
+                            <img class="certimgsize" src="https://www.w3schools.com/tags/img_girl.jpg" (click)="certfImg('https://www.w3schools.com/tags/img_girl.jpg')" style="cursor: pointer; border-radius: 10px; border: 2px solid darkgray;">
 
                         </div>
                         <div class="col-8">
