--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -96,17 +96,17 @@
             <div class="col-12">
                 <div role="alert" *ngFor="let certf of certificates" class="alert alert-info text-light" style="background-color: #14171d; display: grid; grid-template-rows: repeat(5, 20px); padding: 5px 10px;"> 
                     <div class="row">
-                        <div class="col-2">
+                        <div class="col-4 col-md-2">
                             <img class="certimgsize" src="{{certf.imgurl}}" (click)="certfImg(certf.imgurl)" style="cursor: pointer; border-radius: 10px; border: 2px solid darkgray;">
                         </div>
-                        <div class="col-10">
+                        <div class="col-8 col-md-10 certfcontent">
                             <div class="d-flex justify-content-between" style="color: #9ad8dcdb; margin-left: 5px">
-                                <span>{{certf.title}}</span>
-                                <span style="font-size: x-small;color: darkgray;">{{certf.company}}</span>
+                                <span class="certftitle">{{certf.title}}</span>
+                                <span class= "certfbrand">{{certf.company}}</span>
                             </div>
                             <div class="d-flex justify-content-between">
-                                <p style="font-size: smaller; margin-left: 15px" class="mt-1">{{certf.description}}</p>
-                                <a [href]="'https://' + certf.link" target="_blank" class="bi bi-box-arrow-up-right" style="margin-top: 9.5%; font-size: smaller; color: darkgray;"></a>
+                                <span class="mt-1 certfdesc">{{certf.description}}</span>
+                                <a [href]="'https://' + certf.link" target="_blank" class="bi bi-box-arrow-up-right certflinkicon"></a>
                             </div>
                         </div>
                     </div>
