--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,5 +1,6 @@
-<div #target class="card1 bg-dark text-light" style="display: none;">
-    <div class="py-0 mycard card-body full-height-card">
+<div class="fade-container">
+<div #target class="card1 bg-dark text-light active">
+    <div class="py-0 mycard card-body full-height-card shadow-visible">
         <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
         <!-- <div class="grid-1 mt-3" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6></div> -->
         <div class="row">
@@ -26,7 +27,7 @@
         </div>
     </div>
 </div>
-<div #target class="card1 bg-dark text-light" style="display:none;">
+<div #target class="card1 bg-dark text-light">
     <div class="py-0 mycard card-body full-height-card">
         <!-- <div class="mt-3 mb-3" style="border-bottom: 0.1rem solid #373434;"><h6>Works / Projects</h6></div> -->
         <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Works / Projects</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
@@ -62,7 +63,7 @@
         </div>
     </div>    
 </div>    
-<div #target class="card1 bg-dark text-light" style="display:none;">
+<div #target class="card1 bg-dark text-light">
     <div class="py-0 text-center mycard card-body full-height-card">
         <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Skills</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
         <div class="mb-5" *ngFor="let array of stack">
@@ -76,7 +77,7 @@
 
     </div>    
 </div>  
-<div #target class="card1 bg-dark text-light" style="display:none;">
+<div #target class="card1 bg-dark text-light">
     <div class="py-0 mycard card-body full-height-card">
         <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Resume / Certificates</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
 
@@ -144,3 +145,4 @@
         </div>
     </div>    
 </div>  
+</div>
