--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -49,7 +49,14 @@
   height: 100%;
   top: 20px;
   left: 20px;
-  transition: 0.2s;
+  /* transition: 0.2s; */
+  opacity: 0;
+  
+  transition: opacity 0.4s ease-in-out; 
+}
+
+.mycard.shadow-visible::after {
+  opacity: 1;
 }
 
 .mycard::-webkit-scrollbar {
@@ -77,6 +84,10 @@
     width: 95vw; 
     height: 45rem;
     margin-top: 1rem;
+  }
+
+  .fade-container {
+    height: 90vh !important;
   }
 
   .card-title {
@@ -162,4 +173,30 @@
     padding: 0.25rem 0.5rem;
     font-size: 0.85rem; 
   }
+}
+
+.fade-container {
+  position: relative; 
+  width: 90vw; 
+  max-width: 60rem; 
+  height: 33rem; 
+  margin-left: auto; 
+  margin-right: auto;
+}
+
+.fade-container .card1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  opacity: 0; 
+  pointer-events: none; 
+  transition: opacity 0.5s ease-in-out; 
+}
+
+.fade-container .card1.active {
+  opacity: 1;
+  pointer-events: auto;
 }
